--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, inital-scale=1" />
         <link rel="stylesheet" href="src/components/navbar/css/index.css" />
+        <link rel="stylesheet" href="src/components/dynamic/stylesheets/index.css" />
+        <link rel="stylesheet" href="src/components/home/stylesheets/index.css" />
         <title>Hacienda</title>
         <style>
             * { padding: 0; margin: 0; }
