--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, inital-scale=1" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="src/components/navbar/css/index.css" />
         <link rel="stylesheet" href="src/components/dynamic/stylesheets/index.css" />
         <link rel="stylesheet" href="src/components/home/stylesheets/index.css" />
+        <link rel="stylesheet" href="fonts/index.css" />
         <title>Hacienda</title>
         <style>
             * { padding: 0; margin: 0; }
@@ -14,8 +16,6 @@
                 position: relative;
                 padding: 0.5rem; 
                 display: flex; 
-                height: 100%; 
-                height: 100vh;
                 flex-direction: column; 
                 box-sizing: border-box;
                 overflow: hidden;
