Moved index.html from the root of the project into the src folder.

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, inital-scale=1" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="src/components/navbar/css/index.css" />
-        <link rel="stylesheet" href="src/components/dynamic/stylesheets/index.css" />
-        <link rel="stylesheet" href="src/components/home/stylesheets/index.css" />
-        <link rel="stylesheet" href="fonts/index.css" />
+        <link rel="stylesheet" href="../fonts/index.css" />
         <title>Hacienda</title>
         <style>
             * { padding: 0; margin: 0; }
@@ -23,6 +20,6 @@
         </style>
     </head>
     <body id="root">
-        <script src="./src/index.js" type="module" charset="utf-8"></script>
+        <script src="./index.js" charset="utf-8"></script>
     </body>
 </html>
