Added a background color and removed all the backslashes from head tags.

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, inital-scale=1" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="../fonts/index.css" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../fonts/index.css">
         <title>Hacienda</title>
         <style>
             * { padding: 0; margin: 0; }
             :root { font-size: 16px; }
-            #root { 
+            #root {
+                background-color: #FA3219;
                 position: relative;
-                padding: 0.5rem; 
+                padding: 0.8rem; 
                 display: flex; 
                 flex-direction: column; 
                 box-sizing: border-box;
                 overflow: hidden;
+            }
+            .current {
+                border-bottom: 2px solid #000;
             }
         </style>
     </head>
