--- a/src/index.html
+++ b/src/index.html
@@ -4,26 +4,26 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../fonts/index.css">
+        <link rel="stylesheet" href="../src/fonts/index.css">
         <title>Hacienda</title>
         <style>
             * { padding: 0; margin: 0; }
             :root { font-size: 16px; }
             #root {
-                background-color: #FA3219;
+                font-family: 'Clear', sans-serif;
                 position: relative;
                 padding: 0.8rem; 
                 display: flex; 
                 flex-direction: column; 
                 box-sizing: border-box;
                 overflow: hidden;
+                transition: 1s;
             }
-            .current {
-                border-bottom: 2px solid #000;
-            }
+            .red { background-color: #FA3219; }
+            .yellow { background-color: #F0B450; }
         </style>
     </head>
-    <body id="root">
+    <body id="root" class="red">
         <script src="./index.js" charset="utf-8"></script>
     </body>
 </html>
